<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@color/bgDynamic">

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/signup"
        android:textColor="@color/primaryText"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/username"
        android:textColor="@color/secondaryText" />

    <EditText
        android:id="@+id/insertUsername"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edittext_rounded_bg"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:textColor="@color/primaryText"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insertUsername"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/email"
        android:textColor="@color/secondaryText" />

    <EditText
        android:id="@+id/insertEmail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edittext_rounded_bg"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:textColor="@color/primaryText"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/newpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insertEmail"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/newpass"
        android:textColor="@color/secondaryText" />

    <EditText
        android:id="@+id/insertPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/newpassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edittext_rounded_bg"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="@color/primaryText"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insertPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/black"
        android:text="@string/signup" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSignUp"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:gravity="center">

        <TextView
            android:id="@+id/beforesignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/montserrat_reg"
            android:shadowColor="@color/black"
            android:shadowRadius="1"
            android:text="@string/haveaccountask"
            android:textColor="@color/primaryText" />

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/montserrat_reg"
            android:shadowColor="@color/black"
            android:shadowRadius="1"
            android:text="@string/signin"
            android:textAlignment="center"
            android:textColor="@color/mint_green" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/google"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/signingoogle"
        android:layout_alignEnd="@id/btnSignUp"
        android:layout_alignStart="@id/btnSignUp"
        android:layout_marginTop="30dp"
        android:layout_alignTop="@id/sign_in"/>
</RelativeLayout>