<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signinscreen"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:background="@color/bgDynamic">

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/signin"
        android:textColor="@color/primaryText"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/email"
        android:textColor="@color/secondaryText" />

    <EditText
        android:id="@+id/insertEmail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edittext_rounded_bg"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:textColor="@color/primaryText"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insertEmail"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Password"
        android:textColor="@color/secondaryText" />

    <EditText
        android:id="@+id/insertPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edittext_rounded_bg"
        android:ems="10"
        android:inputType="textPassword"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"

        android:textColor="@color/primaryText"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insertPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/montserrat_reg"
        android:text="Forgot your password?"
        android:textColor="@color/mint_green"
        android:shadowColor="@color/black"
        android:shadowRadius="1"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgetpassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Sign In"
        android:textColor="@color/black" />

<!--    <Button-->
<!--        android:id="@+id/googlesignin"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/forgetpassword"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_gravity="center"-->
<!--        android:fontFamily="@font/montserrat_bold"-->
<!--        android:text="with google"-->
<!--        android:textColor="@color/black" />-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_below="@+id/btnSignIn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/beforesignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="5dp"
            android:text="@string/donthaveaccountask"
            android:fontFamily="@font/montserrat_reg"
            android:textColor="@color/primaryText" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:text="@string/signup"
            android:fontFamily="@font/montserrat_reg"
            android:textAlignment="center"
            android:textColor="@color/mint_green"
            android:shadowColor="@color/black"
            android:shadowRadius="1"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/google"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/signingoogle"
        android:layout_alignEnd="@id/btnSignIn"
        android:layout_alignStart="@id/btnSignIn"
        android:layout_marginTop="45dp"
        android:layout_alignTop="@id/sign_in"/>

</RelativeLayout>